third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/freeze_field_invalid.exp

Diagnostics:
error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- field `f` previously mutably borrowed here
12 │         freeze(s);
   │         ^^^^^^^^^ frozen here
13 │         *f;
   │         -- conflicting reference `f` used here

error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/freeze_field_invalid.move:19:9
   │
18 │         let g = &mut s.f; // error in v2
   │                 -------- field `f` previously mutably borrowed here
19 │         freeze(s);
   │         ^^^^^^^^^ frozen here
20 │         *f;
21 │         *g;
   │         -- conflicting reference `g` used here
